tests/double-type-annotation.expected

Desugared:

	(: (: (Integer 4) int) (all a a))
Type error: The expression at line 5, columns 2-8 does not match its type annotation.
The annotation says its type should be:

all a. a

but its actual type is:

int

We can't set the type variable `a` to int, because `a` is an `all`-bound type variable. The code must work for *all* types `a`, not just int.
